<resources>
    <string name="app_name">Right News</string>
    <string name="title_news">News</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="search_bar_hint">Search</string>
    <string name="banner_image_cd">Banner image</string>
    <string name="fragment_news_latest_news">Latest news</string>
    <string name="fragment_news_see_all">See all</string>
    <string name="dotted">&#8226;</string>
    <string name="news_illustrative_image_ct">News illustrative image</string>
    <string name="fragment_news_all_sections">All</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_news_fragment">Latest News</string>
    <string name="profile_fragment">Profile</string>
    <string name="favorites_fragment">Favorites</string>
    <string name="lore_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sollicitudin malesuada convallis. Integer sagittis eu ipsum varius fermentum. Ut elementum ultrices pulvinar. Suspendisse id metus ornare, faucibus nibh tempor, ullamcorper turpis. Donec id condimentum purus. Mauris dictum neque nisl, nec lobortis arcu dapibus eget. Proin et dolor pharetra, sagittis diam nec, pulvinar sem. Vestibulum ut iaculis quam. Nulla id augue lobortis, rutrum ante vitae, dictum arcu. Phasellus tincidunt leo id rhoncus vulputate. Praesent sodales ut turpis vitae fringilla. Donec finibus laoreet aliquam. Mauris sit amet tellus tincidunt purus laoreet mattis. Donec turpis tellus, convallis vel diam vel, commodo ultricies lacus. Quisque ut arcu aliquet, tempus arcu eu, posuere tortor. Vestibulum tincidunt, quam vel sodales tincidunt, enim nulla varius tellus, non ultrices eros tortor id mi. Aenean a egestas dolor. Ut luctus magna in lectus malesuada, a porta erat varius. Aliquam erat volutpat. Proin a pretium enim. Nam eu nisl id arcu posuere eleifend consequat eget leo. Fusce pretium sapien quis metus ultricies condimentum. Integer sodales metus velit, in commodo ex ornare id. Vestibulum mattis libero et nibh rhoncus pellentesque. Quisque imperdiet, leo at pellentesque iaculis, nunc dui pellentesque augue, id tempor elit lacus eget nunc. Vivamus viverra interdum sem eu cursus. Donec dictum risus vitae diam venenatis, vel hendrerit quam placerat. Nulla dui dolor, imperdiet vitae est ut, mollis tristique felis. Proin eros risus, tincidunt ut faucibus in, sollicitudin et metus. Vivamus blandit ligula faucibus ante scelerisque suscipit. Integer in iaculis elit. Mauris faucibus est id urna pellentesque commodo. Pellentesque et nulla est. Aenean dictum enim ac nunc gravida ornare. Quisque est elit, consequat quis blandit et, volutpat ut orci. Phasellus fringilla arcu in quam sagittis ultricies. Morbi suscipit orci sit amet est vehicula tempor. Maecenas volutpat risus vitae sem facilisis, non condimentum libero cursus. Pellentesque egestas mauris a libero faucibus accumsan. Praesent viverra at mi vitae tristique. Curabitur eget nibh tortor. Duis et ante sapien. Integer ultricies neque lectus, lobortis dapibus magna venenatis sollicitudin. Nulla facilisi. Sed in quam blandit, aliquam tellus et, vestibulum nisi. Vivamus quis lorem sed enim porta ultrices. Cras sagittis, turpis at viverra molestie, ipsum nibh laoreet urna, eu blandit ipsum erat id est. Donec malesuada aliquam aliquam. Vestibulum scelerisque lorem ac neque pharetra, sit amet vestibulum nisl eleifend. Donec luctus sagittis magna nec consectetur. Donec blandit, ipsum in pulvinar hendrerit, mi mauris imperdiet mauris, ac malesuada lacus mauris id erat. Sed lacinia fringilla eros, nec suscipit felis mollis ut. In ut massa ut tortor pharetra fringilla. Proin ultrices ligula quis eros blandit laoreet. Integer eget nibh ligula.</string>
    <string name="news_details_image_ct">Ilustrative image</string>
    <string name="fragment_news_details_fab_ct">Add news to favorite</string>
    <string name="navigate_back_button_ct">Navigate back button</string>
    <string name="all_sections_fragment">All Sections</string>
    <string name="no_results_found">No results found</string>
    <string name="search_fragment">Search</string>
    <string name="search_content">Search content</string>
    <string name="retry">Retry</string>
    <string name="news_details_fragment"></string>
    <string name="network_status_success">Your information is up-to-date</string>
    <string name="network_error">Network error: unable to get updated content</string>
    <string name="unknown_error">Unknown error has occurred</string>

</resources>