<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/newsFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.cailloutr.rightnews.ui.newsfragment.NewsFragment"
        android:label="Right News"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_newsFragment_to_latestNewsFragment"
            app:destination="@id/latestNewsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_newsFragment_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_newsFragment_to_allSectionsFragment"
            app:destination="@id/allSectionsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_newsFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.cailloutr.rightnews.ui.FavoritesFragment"
        android:label="@string/favorites_fragment"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.cailloutr.rightnews.ui.ProfileFragment"
        android:label="@string/profile_fragment"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/latestNewsFragment"
        android:name="com.cailloutr.rightnews.ui.latestnewsfragment.LatestNewsFragment"
        android:label="@string/latest_news_fragment"
        tools:layout="@layout/fragment_latest_news" >
        <action
            android:id="@+id/action_latestNewsFragment_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <argument
            android:name="sectionId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/newsDetailsFragment"
        android:name="com.cailloutr.rightnews.ui.newsdetailsfragment.NewsDetailsFragment"
        android:label="fragment_news_details"
        tools:layout="@layout/fragment_news_details" >
        <argument
            android:name="article"
            app:argType="com.cailloutr.rightnews.model.News" />
    </fragment>
    <fragment
        android:id="@+id/allSectionsFragment"
        android:name="com.cailloutr.rightnews.ui.allsectionsfragment.AllSectionsFragment"
        android:label="@string/all_sections_fragment"
        tools:layout="@layout/fragment_all_sections" >
        <action
            android:id="@+id/action_allSectionsFragment_to_latestNewsFragment"
            app:destination="@id/latestNewsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.cailloutr.rightnews.ui.searchfragment.SearchFragment"
        android:label="@string/search_fragment"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_newsDetailsFragment"
            app:destination="@id/newsDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>