<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_news_details_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:layoutDescription="@xml/scene"
    tools:context=".NewsDetailsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/back_card"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/blur_background"
        android:padding="@dimen/small_padding"
        app:cardCornerRadius="@dimen/card_default_corner_radius"
        app:cardElevation="@dimen/card_view_default_elevation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/navigate_back_button_ct"
            android:src="@drawable/ic_arrow_back_24" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="@dimen/fragment_news_details_image_height"
        android:contentDescription="@string/news_details_image_ct"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ranni" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/cut_background"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/default_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/news_detail_card_half_height"
            android:text="@string/lore_ipsum"
            android:textAppearance="@style/TextAppearance.RightNews.Body1" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:contentDescription="@string/fragment_news_details_fab_ct"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_favorite_24"
        app:layout_anchor="@id/nested_scrollview"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_news_details_card"
        android:layout_width="@dimen/news_detail_card_width"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/news_detail_card_height"
        app:cardBackgroundColor="@color/color_surface_70"
        app:cardCornerRadius="@dimen/card_default_corner_radius"
        app:cardElevation="@dimen/card_view_high_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blur_background">

            <TextView
                android:id="@+id/publication_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.RightNews.Overline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="05 de maio 2023" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.RightNews.Headline6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/publication_date"
                tools:text="Thi is a Headsssss sssssss sss ssssss  sdsda asd asd asd asd asd asdasd asd asd asdsssssssline" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.motion.widget.MotionLayout>